# jarvis

./: .gitignore  README.md  config.yaml  pyproject.toml
data/documents/: test_doc.md
jarvis/: __init__.py  cli.py  config.py  scheduler.py  sessions.py  speech.py
jarvis/briefing/: briefing.py  calendar_source.py  email_source.py  news_source.py  tts.py
jarvis/coding/: coding.py  file_ops.py  sandbox.py
jarvis/llm/: __init__.py  base.py  ollama_backend.py  openai_backend.py  router.py
jarvis/research/: doc_index.py  research.py  web_search.py
jarvis/utils/: text.py
